--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="#" onclick="toggleModal();">Home</a></li>
-                <li><a href="#" onclick="toggleModal();">About us</a></li>
-                <li><a href="#" onclick="toggleModal();">Coffee</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+                <li><a href="coffee.html">Coffee</a></li>
                 <li><a href="#" onclick="toggleModal();">Surprise!</a></li>
                 <li><a href="#" onclick="toggleModal();">Contact</a></li>
               </ul>
@@ -36,8 +36,8 @@
         
           <ul class="sidenav" id="mobile-demo">
             <li><a href="#" onclick="toggleModal();">Home</a></li>
-            <li><a href="#" onclick="toggleModal();">About us</a></li>
-            <li><a href="#" onclick="toggleModal();">Coffee</a></li>
+            <li><a href="aboutus.html">About us</a></li>
+            <li><a href="coffee.html">Coffee</a></li>
             <li><a href="#" onclick="toggleModal();">Surprise!</a></li>
             <li><a href="#" onclick="toggleModal();">Contact</a></li>
           </ul>
