--- a/aboutus.html
+++ b/aboutus.html
@@ -59,7 +59,23 @@
         <footer class="footer-one">
             <div class="container">
                 <div class="row">
-                    <div class="col l6 s12 center">
+                <div class="col l4 s12 center">
+                        <h4 class="white-text">
+                            Useful Links
+                        </h4>
+                        <ul>
+                            <li><a href="aboutus.html" class="grey-text text-lighten-3">
+                                About Us
+                            </a></li>
+                            <li><a href="#" class="grey-text text-lighten-3">
+                                Contact Us
+                            </a></li>
+                            <li><a href="coffee.html" class="grey-text text-lighten-3">
+                                Coffee
+                            </a></li>
+                        </ul>
+                    </div>
+                    <div class="col l4 s12 center">
                         <h4 class="white-text">
                             Contact Us
                         </h4>
@@ -70,7 +86,7 @@
                             +91-9898989800
                         </p>
                     </div>
-                    <div class="col l6 s12 center">
+                    <div class="col l4 s12 center">
                         <h4 class="white-text">
                             Social Media
                         </h4>
