--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="coffee.html">Coffee</a></li>
-                <li><a href="#" onclick="toggleModal();">Surprise!</a></li>
+                <li><a href="surprise.html" >Surprise!</a></li>
                 <li><a href="#" onclick="toggleModal();">Contact</a></li>
               </ul>
             </div>
@@ -31,7 +31,7 @@
           <ul class="sidenav" id="mobile-demo">
             <li><a href="index.html">Home</a></li>
             <li><a href="coffee.html" >Coffee</a></li>
-            <li><a href="#" onclick="toggleModal();">Surprise!</a></li>
+            <li><a href="surprise.html" >Surprise!</a></li>
             <li><a href="#" onclick="toggleModal();">Contact</a></li>
           </ul>
           </ul>        
