--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <li><a href="#" onclick="toggleModal();">Home</a></li>
                 <li><a href="aboutus.html">About us</a></li>
                 <li><a href="coffee.html">Coffee</a></li>
-                <li><a href="#" onclick="toggleModal();">Surprise!</a></li>
-                <li><a href="#" onclick="toggleModal();">Contact</a></li>
+                <li><a href="surprise.html">Surprise!</a></li>
+                <li><a href="hygiene.html">Hygiene</a></li>
               </ul>
             </div>
           </nav>
@@ -38,13 +38,14 @@
             <li><a href="#" onclick="toggleModal();">Home</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="coffee.html">Coffee</a></li>
-            <li><a href="#" onclick="toggleModal();">Surprise!</a></li>
-            <li><a href="#" onclick="toggleModal();">Contact</a></li>
+            <li><a href="surprise.html" >Surprise!</a></li>
+            <li><a href="hygiene.html">Hygiene</a></li>
           </ul>
           </ul>        
     </section>
 
     <section class="fslider">
+      
         <div class="slider">
             <ul class="slides">
                 <li>
@@ -73,6 +74,7 @@
     </section>
 
     <section class="descrip">
+      
         <div class="section white center">
             <h2 class="header">
                 CafeKing - Ultimate quality Coffee
