--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#" onclick="toggleModal();">Home</a></li>
                 <li><a href="aboutus.html">About us</a></li>
                 <li><a href="coffee.html">Coffee</a></li>
-                <li><a href="#" onclick="toggleModal();">Surprise!</a></li>
+                <li><a href="surprise.html">Surprise!</a></li>
                 <li><a href="#" onclick="toggleModal();">Contact</a></li>
               </ul>
             </div>
@@ -46,7 +46,7 @@
             <li><a href="#" onclick="toggleModal();">Home</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="coffee.html">Coffee</a></li>
-            <li><a href="#" onclick="toggleModal();">Surprise!</a></li>
+            <li><a href="surprise.html">Surprise!</a></li>
             <li><a href="#" onclick="toggleModal();">Contact</a></li>
           </ul>
           </ul>        
