--- a/aboutus.html
+++ b/aboutus.html
@@ -79,6 +79,9 @@
                                 Facebook
                             </a></li>
                             <li><a href="#" class="grey-text text-lighten-3">
+                                LinkedIn
+                            </a></li>
+                            <li><a href="#" class="grey-text text-lighten-3">
                                 Instagram
                             </a></li>
                             <li><a href="#" class="grey-text text-lighten-3">
