index update and added css for tools

--- a/coffee.html
+++ b/coffee.html
@@ -92,6 +92,9 @@
                             <li><a href="#" class="grey-text text-lighten-3">
                                 Twitter
                             </a></li>
+                            <li><a href="#" class="grey-text text-lighten-3">
+                                Linkedin
+                            </a></li>
                         </ul>
                     </div>
                 </div>
