--- a/hygiene.html
+++ b/hygiene.html
@@ -45,7 +45,7 @@
                     <img  src="./images/coffee-bakery-items.jpg" alt="image one">
                     <span class="caption center-align white-text">
                         <h4 class="">PRECAUTIONARY MEASURES AGAINST COVID-19</h4>
-                        <h5 class="light text-lighten-3">Our Hygiene Measures </h5>
+                        <h5 class="light text-lighten-3">Our Hygiene Measures for COVID-19 </h5>
                     </span>
                 </li>
             </ul>
@@ -66,6 +66,7 @@
               <li>Ensuring all deliveries are contactless, and all orders given to delivery partners and customers in cafes are contactless.</li>
               <li>Offering masks (in a contactless manner) to those delivery partners who are not wearing any. </li>
               <li>Ensuring that payments are contactless and discouraging customers from paying in cash.</li>
+              <li>Ensuring that payments are contactless and discouraging customers from paying in cards</li>
           </ol>
           <p class="grey-text text-darken-3 lighten-3">If you have any questions about the precautions we are taking, please let us know. We are closely monitoring the situation and re-evaluating safety protocols every step of the way.</p>
         </div>
