--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="row container">
                 <h2 class="header">About Us</h2>
                 <p class="grey-text text-darken-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quos. Molestiae ipsum dolore quod, nostrum exercitationem natus repellat vero? Consequuntur reiciendis odit tempore atque accusantium ullam modi autem aliquid soluta repudiandae accusamus quas alias natus placeat tenetur, voluptatem distinctio maxime. Accusamus ipsam exercitationem optio? Sapiente cum eveniet tempora necessitatibus? Doloribus quae ipsam aliquam incidunt ratione, rerum porro sunt expedita? Laborum sapiente consectetur dolor corporis fugit dicta ipsa rerum officiis voluptates! Non obcaecati molestiae voluptates quidem nihil repellendus laudantium ea sapiente velit. Iste sit, quod illo ratione consequatur at nemo dolores culpa aspernatur veniam expedita voluptate, praesentium enim itaque totam explicabo.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vitae obcaecati quos cumque pariatur, voluptas illo, maiores numquam, autem alias non blanditiis placeat libero earum eos vel saepe nobis accusamus.
                 </p>
                 <a href="#" style="background-color: #6f4037 !important" onclick="toggleModal()" class="btn waves-effect waves-light">Read More</a>
             </div>
