css update and class added in index

--- a/index.html
+++ b/index.html
@@ -299,6 +299,9 @@
                             <li><a href="#" class="grey-text text-lighten-3">
                                 Twitter
                             </a></li>
+                            <li class="ui-tools"><a href="#" class="grey-text text-lighten-3">
+                                Linkedin
+                            </a></li>
                         </ul>
                     </div>
                 </div>
@@ -320,7 +323,7 @@
             <!-- class modal-content also coming from materalize css  -->
             <div class="modal-content">
                 <h4 id="info-modal-heading">Link Disabled</h4>
-                <p id="info-modal-content">Sorry ! All links are dis as of now</p>
+                <p id="info-modal-content">Sorry ! All links are Disabled as of now</p>
             </div>
             <div class="modal-footer">
                 <a href="#" class="modal-close wave-effect btn-flat">Close</a>
